--- a/app/assets/style/helpers/_variables.scss
+++ b/app/assets/style/helpers/_variables.scss
@@ -67,13 +67,13 @@ $colors: (
 // scss-docs-end colors-map
 
 // scss-docs-start theme-color-variables
-$primary:       #630834; // $blue !default;
-$secondary:     #707070 !default;
-$success:       #E31277 !default;
+$primary:       #907A7B;
+$secondary:     #C0A4A5;
+$success:         $green !default;
 $info:          #EFEFEF !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
-$light:         $gray-100 !default;
+$light:         #F5F0E7;
 $dark:          $gray-900 !default;
 $white:         #fff;
 // scss-docs-end theme-color-variables
@@ -249,23 +249,30 @@ $gradient: linear-gradient(180deg, rgba($white, .15), rgba($white, 0)) !default;
 // You can add more entries to the $spacers map, should you need more variation.
 
 // scss-docs-start spacer-variables-maps
-$spacer: 1rem !default;
+$spacer: 1rem;
 $spacers: (
   0: 0,
-  1: $spacer * .25,  // 4 
-  2: $spacer * .5,   // 8
-  3: $spacer * .75,  // 12
-  4: $spacer,        // 16
-  5: $spacer * 1.25, // 20
-  6: $spacer * 1.5,  // 24
-  7: $spacer * 1.75, // 28
-  8: $spacer * 2,    // 32
-  9: $spacer * 2.25, // 36
-  10: $spacer * 2.5, // 40
-  11: $spacer * 2.75,// 44
-  12: $spacer * 3,   // 48
-  13: $spacer * 3.75,   // 60
-) !default;
+  1:  $spacer * .25,   // 4 
+  2:  $spacer * .5,    // 8
+  3:  $spacer * .75,   // 12
+  4:  $spacer,         // 16
+  5:  $spacer * 1.25,  // 20
+  6:  $spacer * 1.5,   // 24
+  7:  $spacer * 1.75,  // 28
+  75: $spacer * 1.875, // 28
+  8:  $spacer * 2,     // 32
+  9:  $spacer * 2.25,  // 36
+  10: $spacer * 2.5,   // 40
+  11: $spacer * 2.75,  // 44
+  12: $spacer * 3,     // 48
+  13: $spacer * 3.25,  // 52
+  14: $spacer * 3.5,   // 56
+  15: $spacer * 3.75,  // 60
+  20: $spacer * 5,     // 80
+  24: $spacer * 5.5,   // 88
+  26: $spacer * 6.5,   // 104
+  275: $spacer * 6.875,// 110
+);
 
 $negative-spacers: if($enable-negative-margins, negativify-map($spacers), null) !default;
 // scss-docs-end spacer-variables-maps
@@ -437,7 +444,7 @@ $aspect-ratios: (
 
 // scss-docs-start font-variables
 // stylelint-disable value-keyword-case
-$font-family-sans-serif:      Roboto, "Noto Sans TC", sans-serif !default;
+$font-family-sans-serif:      "Noto Sans TC", sans-serif !default;
 $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 // stylelint-enable value-keyword-case
 $font-family-base:            var(--#{$variable-prefix}font-sans-serif) !default;
@@ -473,13 +480,22 @@ $h6-font-size:                $font-size-base !default;
 
 // scss-docs-start font-sizes
 $font-sizes: (
-  1: $h1-font-size,
-  2: $h2-font-size,
-  3: $h3-font-size,
-  4: $h4-font-size,
-  5: $h5-font-size,
-  6: $h6-font-size
-) !default;
+  // 1: $h1-font-size,
+  // 2: $h2-font-size,
+  // 3: $h3-font-size,
+  // 4: $h4-font-size,
+  // 5: $h5-font-size,
+  // 6: $h6-font-size
+  "smaller":  .75rem,  // 12
+  "small":    .875rem, // 14
+  "medium":   1rem,    // 16
+  "large":    1.25rem, // 20
+  "larger":   1.5rem,  // 24
+  "x-large":  1.75rem, // 28
+  "xx-large": 2rem,    // 32
+  "huge":     2.25rem, // 36
+  "huger":    2.5rem,  // 40
+) ;
 // scss-docs-end font-sizes
 
 // scss-docs-start headings-variables
@@ -1488,101 +1504,3 @@ $kbd-color:                         $white !default;
 $kbd-bg:                            $gray-900 !default;
 
 $pre-color:                         null !default;
-
-// $utilities: (
-//   // 40 36 32 28 24 20 16 14 12
-//   "font-size": (
-//     property: font-size,
-//     class: fz,
-//     responsive: true,
-//     values: (
-//       "smaller": .75rem,
-//       "small": .875rem,
-//       "medium": 1rem,
-//       "large": 1.25rem,
-//       "larger": 1.5rem,
-//       "x-large": 1.75rem,
-//       "xx-large": 2rem,
-//       "huge": 2.25rem,
-//       "huger": 2.5rem,
-//     )
-//   ),
-//   "font-weight": (
-//     property: font-weight,
-//     class: fw,
-//     responsive: true,
-//     values: (
-//       light: $font-weight-light,
-//       lighter: $font-weight-lighter,
-//       normal: $font-weight-normal,
-//       medium: 500,
-//       bold: $font-weight-bold,
-//       bolder: $font-weight-bolder
-//     )
-//   ),
-//   "opacity": (
-//     property: opacity,
-//     values: (
-//       0: 0,
-//       25: .25,
-//       50: .5,
-//       75: .75,
-//       90: .90,
-//       100: 1,
-//     )
-//   ),
-//   "background-color": (
-//     property: background-color,
-//     class: bg,
-//     responsive: true,
-//     values: map-merge(
-//       $theme-colors,
-//       (
-//         "body": $body-bg,
-//         "white": $white,
-//         "transparent": transparent
-//       )
-//     )
-//   ),
-//   "border-end": (
-//     property: border-right,
-//     class: border-end,
-//     responsive: true, 
-//     values: (
-//       null: $border-width solid $border-color,
-//       0: 0,
-//     )
-//   ),
-//   "height": (
-//     property: height,
-//     class: h,
-//     responsive: true, 
-//     values: (
-//       25: 25%,
-//       50: 50%,
-//       75: 75%,
-//       100: 100%,
-//       70vh: 70vh,
-//       100vh: 100vh,
-//       auto: auto
-//     )
-//   ),
-//   "min-height": (
-//     property: min-height,
-//     class: min-h,
-//     responsive: true, 
-//     values: (
-//       25: 25%,
-//       50: 50%,
-//       75: 75%,
-//       100: 100%,
-//       30vh: 30vh,
-//       40vh: 40vh,
-//       50vh: 50vh,
-//       60vh: 60vh,
-//       70vh: 70vh,
-//       100vh: 100vh,
-//       auto: auto
-//     )
-//   ),
-// );
