--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -16,171 +16,47 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light py-4 py-md-7 border-bottom border-secondary">
-      <div class="container d-flex justify-content-end align-items-center position-relative">
-        <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button> -->
-        <h1 class="d-flex align-items-center position-absolute top-50 start-50 translate-middle ">
-          <a href="index.html" class="navbar-brand text-primary fz-large fz-md-larger p-0">EXHIBINECTION</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light py-5">
+      <div class="container d-flex align-items-center">
+        <h1 class="d-flex">
+          <a href="index.html" class="navbar-brand text-primary fz-large fz-md-larger p-0">
+            <img src="./assets/images/DOYOGA-logo.png" alt="LOGO">
+          </a>
         </h1>
         <!-- 登入 / 註冊 -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto">
+          <ul class="navbar-nav mx-auto">
             <li class="nav-item me-md-8">
-              <a class="nav-link py-0 link-secondary" href="#">Sign in</a>
+              <a class="nav-link py-2" href="#">課程介紹</a>
             </li>
             <li class="nav-item me-md-8">
-              <a class="nav-link py-0 link-secondary" href="#">Sign up</a>
+              <a class="nav-link py-2" href="#">瑜珈空間</a>
+            </li>
+            <li class="nav-item me-md-8">
+              <a class="nav-link py-2" href="#">當月課表</a>
             </li>
           </ul>
         </div>
-        <!-- 購物車 -->
-        <button type="button" class="btn btn-link d-flex position-relative" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" >
-          <span class="material-icons">confirmation_number</span>
-          <span class="position-absolute top-15 start-75 translate-middle badge rounded-pill bg-success">3</span>
+        <ul class="navbar-nav">
+          <li class="nav-item me-md-8">
+            <a class="nav-link py-2 " href="#">立即預約</a>
+          </li>
+          <li class="nav-item me-md-8 border border-2 border-primary rounded">
+            <a class="nav-link py-2" href="#">聯絡我們</a>
+          </li>
+        </ul>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
       </div>
     </nav>
-    <main class="main">
+    <main>
       <%- contents %>
     </main>
-    <footer class="py-4 py-md-7">
-      <div class="container d-flex align-items-center flex-wrap">
-        <p class="fz-larger me-4">EXHIBINECTION</p>
-        <p>© 2020. All Rights Reserved.</p>
-        <ul class="list-unstyled d-flex align-items-center ms-auto">
-          <li class="me-6 d-none d-md-block">
-            <a href="#" class="link-secondary">Sign in</a>
-          </li>
-          <li class="d-none d-md-block">
-            <a href="#" class="link-secondary">Sign up</a>
-          </li>
-        </ul>
-      </div>
+    <footer class="py-4 py-md-7 bg-primary">
+      <h2>現在訂閱，獲得課程優惠碼！</h2>
     </footer>
 
-    <!-- offcanvas -->
-    <div class="offcanvas offcanvas-end bg-dark pt-5 pt-md-8 pb-7 pb-md-6 ps-4 ps-lg-8 pe-2 pe-lg-4" tabindex="-1" id="offcanvasRight" data-bs-scroll="false" data-bs-backdrop="false" aria-labelledby="offcanvasRightLabel">
-      <div class="d-flex align-items-center">
-        <h2 class="text-white mb-3 me-auto">Cart List</h2>
-        <input type="button" value="" class="btn-close bg-white me-3 me-lg-5" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight">
-      </div>
-      <ul class="cartScrollbar list-unstyled overflow-auto pe-2 pe-lg-4 mb-5">
-        <li class="bg-white rounded mb-2 mb-lg-3">
-          <input type="button" value="" class="btn-close pt-1 px-1">
-          <div class="d-flex px-4 px-md-8 pb-4 pb-mb-6">
-            <img src="https://images.unsplash.com/photo-1545987796-b199d6abb1b4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="2020 台味設計展" class="img img__offcanvas me-4">
-            <ul class="list-unstyled">
-              <li class="fw-bold mb-1">
-                <h3 class="fz-medium text-nowrap">2020 台味設計展</h3>
-              </li>
-              <li class="fw-medium text-nowrap mb-1">
-                <p>01 JUN — 31 OCT</p>
-              </li>
-              <li class="text-secondary mb-4">
-                <p>全票</p>
-              </li>
-              <li class="fw-bold fz-large">
-                <p>NT$350</p>
-              </li>
-            </ul>
-            <ul class="list-unstyled d-flex flex-column flex-column-reverse flex-lg-row align-items-center ms-auto">
-              <li>
-                <button tyep="button" class="btn btn-link link-dark d-flex p-2">
-                  <span class="material-icons-outlined">remove</span>
-                </button>
-              </li>
-              <li class="px-4">
-                <p class="fz-large fw-bold">01</p>
-              </li>
-              <li>
-                <button tyep="button" class="btn btn-link link-dark d-flex p-2">
-                  <span class="material-icons-outlined">add</span>               
-                </button>
-              </li>
-            </ul>
-          </div>
-        </li>
-        <li class="bg-white rounded mb-2 mb-lg-3">
-          <input type="button" value="" class="btn-close pt-1 px-1">
-          <div class="d-flex px-4 px-md-8 pb-4 pb-mb-6">
-            <img src="https://images.unsplash.com/photo-1510520001634-6af954f45759?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1353&q=80" alt="No.22 線上設計展" class="img img__offcanvas me-4">
-            <ul class="list-unstyled">
-              <li class="fw-bold mb-1">
-                <h3 class="fz-medium text-nowrap">2020 台味設計展</h3>
-              </li>
-              <li class="fw-medium text-nowrap mb-1">
-                <p>01 JUN — 31 OCT</p>
-              </li>
-              <li class="text-secondary mb-4">
-                <p>全票</p>
-              </li>
-              <li class="fw-bold fz-large">
-                <p>NT$350</p>
-              </li>
-            </ul>
-            <ul class="list-unstyled d-flex flex-column flex-column-reverse flex-lg-row align-items-center ms-auto">
-              <li>
-                <button tyep="button" class="btn btn-link link-dark d-flex p-2">
-                  <span class="material-icons-outlined">remove</span>
-                </button>         
-              </li>
-              <li class="px-4">
-                <p class="fz-large fw-bold">01</p>
-              </li>
-              <li>
-                <button tyep="button" class="btn btn-link link-dark d-flex p-2">
-                  <span class="material-icons-outlined">add</span>               
-                </button>
-              </li>
-            </ul>
-          </div>
-        </li>
-        <li class="bg-white rounded mb-2 mb-lg-3">
-          <input type="button" value="" class="btn-close pt-1 px-1">
-          <div class="d-flex px-4 px-md-8 pb-4 pb-mb-6">
-            <img src="https://images.unsplash.com/photo-1545178803-4056771d60a3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="高雄設計節" class="img img__offcanvas me-4">
-            <ul class="list-unstyled">
-              <li class="fw-bold mb-1">
-                <h3 class="fz-medium text-nowrap">高雄設計節</h3>
-              </li>
-              <li class="fw-medium text-nowrap mb-1">
-                <p>01 JUN — 31 OCT</p>
-              </li>
-              <li class="text-secondary mb-4">
-                <p>全票</p>
-              </li>
-              <li class="fw-bold fz-large">
-                <p>NT$350</p>
-              </li>
-            </ul>
-            <ul class="list-unstyled d-flex flex-column flex-column-reverse flex-lg-row align-items-center ms-auto">
-              <li>
-                <button tyep="button" class="btn btn-link link-dark d-flex p-2">
-                  <span class="material-icons-outlined">remove</span>
-                </button>
-              </li>       
-              <li class="px-4">
-                <p class="fz-large fw-bold">01</p>
-              </li>             
-              <li>
-                <button tyep="button" class="btn btn-link link-dark d-flex p-2">
-                  <span class="material-icons-outlined">add</span>
-                </button>
-              </li>    
-            </ul>
-          </div>
-        </li>
-      </ul>
-      <div class="d-flex align-items-center">
-        <p class="text-white me-auto fw-medium fz-large">
-          <span class="me-6">小計</span>
-          NT$1050
-        </p>
-        <a href="cartList.html" type="button" class="btn btn-outline-primary text-primary py-2 px-6 bg-white">前往結帳</a>
-      </div>
-    </div>
     <script src="./assets/js/vendors.js"></script>
     <script src="./assets/js/all.js"></script>
   </body>
