--- a/app/assets/style/helpers/_variables.scss
+++ b/app/assets/style/helpers/_variables.scss
@@ -70,7 +70,7 @@ $colors: (
 $primary:       #907A7B;
 $secondary:     #C0A4A5;
 $success:         $green !default;
-$info:          #EFEFEF !default;
+$info:          #707070 !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         #F5F0E7;
@@ -402,6 +402,7 @@ $border-color:                $gray-300 !default;
 $border-radius:               .25rem !default;
 $border-radius-sm:            .2rem !default;
 $border-radius-lg:            .3rem !default;
+$border-radius-xl:            1rem;
 $border-radius-pill:          50rem !default;
 // scss-docs-end border-radius-variables
 
