--- a/app/assets/style/components/_banner.scss
+++ b/app/assets/style/components/_banner.scss
@@ -3,7 +3,11 @@
   background-size: cover;
   background-repeat: no-repeat;
   &__index {
-    height: 480px;
-    background-image: url("");
+    height: 560px;
+    @include media-breakpoint-up(sm) {
+      height: 582px;
+    }
+    background-position: bottom center;
+    background-image: url("https://images.unsplash.com/photo-1612157777902-5382bc6e864b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80");
   }
 }
