--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -18,12 +18,9 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light py-5">
       <div class="container d-flex align-items-center">
-        <h1 class="d-flex">
-          <a href="index.html" class="navbar-brand text-primary fz-large fz-md-larger p-0">
-            <img src="./assets/images/DOYOGA-logo.png" alt="LOGO">
-          </a>
+        <h1>
+          <a href="index.html">DOYOGA</a>
         </h1>
-        <!-- 登入 / 註冊 -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item me-md-8">
@@ -36,15 +33,15 @@
               <a class="nav-link py-2" href="#">當月課表</a>
             </li>
           </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item me-4 border border-primary rounded-4">
+              <a class="nav-link py-2 " href="#">立即預約</a>
+            </li>
+            <li class="nav-item me-4 border border-primary rounded-4">
+              <a class="nav-link py-2" href="#">聯絡我們</a>
+            </li>
+          </ul>
         </div>
-        <ul class="navbar-nav">
-          <li class="nav-item me-md-8">
-            <a class="nav-link py-2 " href="#">立即預約</a>
-          </li>
-          <li class="nav-item me-md-8 border border-2 border-primary rounded">
-            <a class="nav-link py-2" href="#">聯絡我們</a>
-          </li>
-        </ul>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -53,8 +50,40 @@
     <main>
       <%- contents %>
     </main>
-    <footer class="py-4 py-md-7 bg-primary">
-      <h2>現在訂閱，獲得課程優惠碼！</h2>
+    <footer class="bg-primary">
+      <div class="container">
+        <div class="row justify-content-between align-items-center py-md-6 py-lg-8 border-bottom border-white">
+          <div class="col-lg-8">
+            <h2 class="text-white fw-medium fz-larger fz-md-x-large">現在訂閱，獲得課程優惠碼！</h2>
+          </div>
+          <div class="col-lg-4">
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="輸入您的電子信箱">
+              <input class="btn btn-secondary" value="訂閱">
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-between text-white py-8">
+          <div class="col-4">
+            <ul class="list-unstyled">
+              <li>DOYOGA</li>
+              <li>課程介紹</li>
+              <li>瑜珈空間</li>
+              <li>當月課表</li>
+            </ul>
+          </div>
+          <div class="col-4 d-flex justify-content-center align-items-end">
+            <p>© 2021. All Rights Reserved.</p>
+          </div>
+          <div class="col-4">
+            <ul class="list-unstyled d-flex justify-content-end">
+              <li>f</li>
+              <li>ig</li>
+              <li>l</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </footer>
 
     <script src="./assets/js/vendors.js"></script>
