--- a/app/assets/style/helpers/_base.scss
+++ b/app/assets/style/helpers/_base.scss
@@ -12,7 +12,7 @@ body {
 h1 {
   width: 96px;
   height: 31px;
-  background-image: url('../../images/DOYOGA-logo.png');
+  background-image: url('../../../assets/images/DOYOGA-logo.png');
   background-repeat: no-repeat;
   background-size: contain;
   text-indent: 101%;
