--- a/app/assets/style/helpers/_utilities.scss
+++ b/app/assets/style/helpers/_utilities.scss
@@ -42,5 +42,11 @@ $utilities: map-merge(
         responsive: true,
       )
     ),
+    "width": map-merge(
+      map-get($utilities, "width"),
+      (
+        responsive: true,
+      )
+    ),
   )
 );
