--- a/app/assets/style/helpers/_variables.scss
+++ b/app/assets/style/helpers/_variables.scss
@@ -268,6 +268,7 @@ $spacers: (
   13: $spacer * 3.25,  // 52
   14: $spacer * 3.5,   // 56
   15: $spacer * 3.75,  // 60
+  18: $spacer * 4.5,   // 72
   20: $spacer * 5,     // 80
   24: $spacer * 5.5,   // 88
   26: $spacer * 6.5,   // 104
