--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -17,32 +17,27 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light py-5">
-      <div class="container d-flex align-items-center">
+      <div class="container d-flex justify-content-between align-items-center">
         <h1>
           <a href="index.html">DOYOGA</a>
         </h1>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mx-auto">
-            <li class="nav-item me-md-8">
-              <a class="nav-link py-2" href="#">課程介紹</a>
+          <ul class="navbar-nav justify-content-between w-100">
+            <li class="nav-item me-18 d-none d-lg-block">
+              <a class="nav-link py-2" href="#"></a>
             </li>
-            <li class="nav-item me-md-8">
-              <a class="nav-link py-2" href="#">瑜珈空間</a>
+            <li class="nav-item d-flex flex-column align-items-center flex-lg-row">
+              <a class="nav-link p-2 me-md-8" href="#">課程介紹</a>
+              <a class="nav-link p-2 me-md-8" href="#">瑜珈空間</a>
+              <a class="nav-link p-2 me-md-8" href="#">當月課表</a>
             </li>
-            <li class="nav-item me-md-8">
-              <a class="nav-link py-2" href="#">當月課表</a>
-            </li>
-          </ul>
-          <ul class="navbar-nav">
-            <li class="nav-item me-4 border border-primary rounded-4">
-              <a class="nav-link py-2 " href="#">立即預約</a>
-            </li>
-            <li class="nav-item me-4 border border-primary rounded-4">
-              <a class="nav-link py-2" href="#">聯絡我們</a>
+            <li class="nav-item d-flex flex-column align-items-center flex-lg-row mb-4 mb-lg-0">
+              <a class="nav-link p-2 border border-primary rounded-4 me-lg-4 my-2 my-lg-0" href="#">立即預約</a>
+              <a class="nav-link p-2 border border-primary rounded-4 mt-2 mt-lg-0" href="#">聯絡我們</a>
             </li>
           </ul>
         </div>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
       </div>
@@ -51,35 +46,51 @@
       <%- contents %>
     </main>
     <footer class="bg-primary">
-      <div class="container">
-        <div class="row justify-content-between align-items-center py-md-6 py-lg-8 border-bottom border-white">
-          <div class="col-lg-8">
-            <h2 class="text-white fw-medium fz-larger fz-md-x-large">現在訂閱，獲得課程優惠碼！</h2>
-          </div>
-          <div class="col-lg-4">
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="輸入您的電子信箱">
-              <input class="btn btn-secondary" value="訂閱">
+      <div class="container-fluid border-bottom border-white">
+        <div class="container">
+          <div class="row justify-content-between align-items-center py-6 py-lg-8">
+            <div class="col-lg-8">
+              <h2 class="text-white fw-medium fz-larger fz-md-x-large">現在訂閱，獲得課程優惠碼！</h2>
+            </div>
+            <div class="col-lg-4">
+              <div class="input-group">
+                <input type="text" class="form-control" placeholder="輸入您的電子信箱">
+                <input type="button" class="btn btn-secondary text-white" value="訂閱">
+              </div>
             </div>
           </div>
         </div>
+      </div>
+      <div class="container">
         <div class="row justify-content-between text-white py-8">
           <div class="col-4">
             <ul class="list-unstyled">
-              <li>DOYOGA</li>
-              <li>課程介紹</li>
-              <li>瑜珈空間</li>
-              <li>當月課表</li>
+              <li class="mb-2 fz-larger">DOYOGA</li>
+              <li class="mb-2 fw-light">課程介紹</li>
+              <li class="mb-2 fw-light">瑜珈空間</li>
+              <li class="fw-light mb-2 mb-md-0">當月課表</li>
             </ul>
           </div>
-          <div class="col-4 d-flex justify-content-center align-items-end">
+          <div class="col-md-4 d-flex justify-content-md-center align-items-end">
             <p>© 2021. All Rights Reserved.</p>
           </div>
-          <div class="col-4">
+          <div class="col-4 d-none d-md-block">
             <ul class="list-unstyled d-flex justify-content-end">
-              <li>f</li>
-              <li>ig</li>
-              <li>l</li>
+              <li>
+                <a href="https://www.facebook.com/" class="text-white fz-larger">
+                  <i class="fab fa-facebook"></i>
+                </a>
+              </li>
+              <li class="mx-3">
+                <a href="https://www.instagram.com/" class="text-white fz-larger">
+                  <i class="fab fa-instagram"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://line.me/zh-hant/" class="text-white fz-larger">
+                  <i class="fab fa-line"></i>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
