--- a/app/assets/style/components/_img.scss
+++ b/app/assets/style/components/_img.scss
@@ -1,5 +1,15 @@
 .img { 
   object-fit: cover;
   width: 100%;
-  
+  &__index {
+    &__section1 {
+      height: 420px;
+      @include media-breakpoint-only(md){
+        height: 252px;
+      }
+    }
+    &__section2 {
+      height: 628px;
+    }
+  }
 }
