[ add ] index 評論

--- a/app/assets/style/components/_icon.scss
+++ b/app/assets/style/components/_icon.scss
@@ -1,6 +1,9 @@
 .icon {
   object-fit: cover;
   border-radius: 50%;
+  &--reverseX {
+    transform: scaleX(-1);
+  }
 }
 
 @each $name, $value in $icon-sizes {
