--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -63,7 +63,7 @@
       </div>
       <div class="container">
         <div class="row justify-content-between text-white py-8">
-          <div class="col-4">
+          <div class="col-4 order-1">
             <ul class="list-unstyled">
               <li class="mb-2 fz-larger">DOYOGA</li>
               <li class="mb-2 fw-light">課程介紹</li>
@@ -71,10 +71,10 @@
               <li class="fw-light mb-2 mb-md-0">當月課表</li>
             </ul>
           </div>
-          <div class="col-md-4 d-flex justify-content-md-center align-items-end">
+          <div class="col-md-4 order-3 order-md-2 d-flex justify-content-md-center align-items-end">
             <p>© 2021. All Rights Reserved.</p>
           </div>
-          <div class="col-4 d-none d-md-block">
+          <div class="col-4 order-2 order-md-3">
             <ul class="list-unstyled d-flex justify-content-end">
               <li>
                 <a href="https://www.facebook.com/" class="text-white fz-larger">
