--- a/app/assets/style/helpers/_base.scss
+++ b/app/assets/style/helpers/_base.scss
@@ -21,6 +21,10 @@ h1 {
   overflow: hidden; 
 }
 
+.h1 {
+  background-image: url('../../../assets/images/DOYOGA.png');
+}
+
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6, ul, p, figure {
   margin-bottom: 0;
   line-height: 1.5;
