--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -32,7 +32,7 @@
               <a class="nav-link p-2 me-md-8" href="#">當月課表</a>
             </li>
             <li class="nav-item d-flex flex-column align-items-center flex-lg-row mb-4 mb-lg-0">
-              <a class="nav-link p-2 border border-primary rounded-4 me-lg-4 my-2 my-lg-0" href="#">立即預約</a>
+              <a class="nav-link p-2 border border-primary rounded-4 me-lg-4 my-2 my-lg-0" href="reservation.html">立即預約</a>
               <a class="nav-link p-2 border border-primary rounded-4 mt-2 mt-lg-0" href="#">聯絡我們</a>
             </li>
           </ul>
@@ -65,7 +65,13 @@
         <div class="row justify-content-between text-white py-8">
           <div class="col-4 order-1">
             <ul class="list-unstyled">
-              <li class="mb-2 fz-larger">DOYOGA</li>
+              <li class="mb-2">
+                <div class="h1">
+                  <a href="index.html" class="h1">
+                    DOYOGA
+                  </a>
+                </div>
+              </li>
               <li class="mb-2 fw-light">課程介紹</li>
               <li class="mb-2 fw-light">瑜珈空間</li>
               <li class="fw-light mb-2 mb-md-0">當月課表</li>
