--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -1,8 +1,8 @@
-@import "../../../node_modules/bootstrap/scss/functions";
+@import "node_modules/bootstrap/scss/functions";
 @import "./helpers/variables";
-@import "../../../node_modules/bootstrap/scss/utilities";
+@import "node_modules/bootstrap/scss/utilities";
 @import './helpers/utilities.scss';
-@import "../../../node_modules/bootstrap/scss/bootstrap";
+@import "node_modules/bootstrap/scss/bootstrap";
 
 // project
 @import './helpers/base.scss';
