[ add ] 聯絡我們並修正文字顏色

--- a/app/assets/style/components/_img.scss
+++ b/app/assets/style/components/_img.scss
@@ -59,4 +59,13 @@
       }
     }
   }
+  &__map {
+    height: 195px;
+    @include media-breakpoint-up(md) {
+      height: 323px;
+    }
+    @include media-breakpoint-up(lg) {
+      height: 360px;
+    }
+  }
 }
