--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -28,7 +28,7 @@
             </li>
             <li class="nav-item d-flex flex-column align-items-center flex-lg-row">
               <a class="nav-link p-2 me-md-8" href="#">課程介紹</a>
-              <a class="nav-link p-2 me-md-8" href="#">瑜珈空間</a>
+              <a class="nav-link p-2 me-md-8" href="surroundings.html">瑜珈空間</a>
               <a class="nav-link p-2 me-md-8" href="#">當月課表</a>
             </li>
             <li class="nav-item d-flex flex-column align-items-center flex-lg-row mb-4 mb-lg-0">
