--- a/app/assets/style/helpers/_base.scss
+++ b/app/assets/style/helpers/_base.scss
@@ -6,7 +6,6 @@
 }
 
 body {
-  color: map-get($theme-colors, "primary");
   overflow-x: hidden;
 }
 
@@ -35,6 +34,12 @@ img {
   display: block;
 }
 
-p {
-  font-size: 1rem;
+th, td {
+  vertical-align: center;
 }
+
+td {
+  border-left: 0;
+  border-right: 0;
+}
+
