--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -29,7 +29,7 @@
             <li class="nav-item d-flex flex-column align-items-center flex-lg-row">
               <a class="nav-link p-2 me-md-8" href="#">課程介紹</a>
               <a class="nav-link p-2 me-md-8" href="surroundings.html">瑜珈空間</a>
-              <a class="nav-link p-2 me-md-8" href="#">當月課表</a>
+              <a class="nav-link p-2 me-md-8" href="curriculum.html">當月課表</a>
             </li>
             <li class="nav-item d-flex flex-column align-items-center flex-lg-row mb-4 mb-lg-0">
               <a class="nav-link p-2 border border-primary rounded-4 me-lg-4 my-2 my-lg-0" href="reservation.html">立即預約</a>
