--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -27,7 +27,7 @@
               <a class="nav-link py-2" href="#"></a>
             </li>
             <li class="nav-item d-flex flex-column align-items-center flex-lg-row">
-              <a class="nav-link p-2 me-md-8" href="#">課程介紹</a>
+              <a class="nav-link p-2 me-md-8" href="course.html">課程介紹</a>
               <a class="nav-link p-2 me-md-8" href="surroundings.html">瑜珈空間</a>
               <a class="nav-link p-2 me-md-8" href="curriculum.html">當月課表</a>
             </li>
