--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light py-5">
       <div class="container d-flex justify-content-between align-items-center">
         <h1>
-          <a href="index.html">DOYOGA</a>
+          <a href="index.html" class="d-block">DOYOGA</a>
         </h1>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav justify-content-between w-100">
@@ -67,14 +67,18 @@
             <ul class="list-unstyled">
               <li class="mb-2">
                 <div class="h1">
-                  <a href="index.html" class="h1">
-                    DOYOGA
-                  </a>
+                  <a href="index.html" class="d-block">DOYOGA</a>
                 </div>
               </li>
-              <li class="mb-2 fw-light">課程介紹</li>
-              <li class="mb-2 fw-light">瑜珈空間</li>
-              <li class="fw-light mb-2 mb-md-0">當月課表</li>
+              <li class="mb-2 fw-light">
+                <a href="course.html" class="text-white">課程介紹</a>
+              </li>
+              <li class="mb-2 fw-light">
+                <a href="surroundings.html" class="text-white">瑜珈空間</a>
+              </li>
+              <li class="fw-light mb-2 mb-md-0">
+                <a href="curriculum.html" class="text-white">當月課表</a>
+              </li>
             </ul>
           </div>
           <div class="col-md-4 order-3 order-md-2 d-flex justify-content-md-center align-items-end">
