[ edit ] 修正按鈕文字顏色

--- a/app/assets/style/helpers/_variables.scss
+++ b/app/assets/style/helpers/_variables.scss
@@ -1529,3 +1529,9 @@ $opacity-values: (
   75: .75,
   100: 1,
 );
+
+$btn-colors: (
+  "primary": $white,
+  "secondary": $white,
+  "light": $primary,
+);
