--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -55,7 +55,7 @@
             <div class="col-lg-4">
               <div class="input-group">
                 <input type="text" class="form-control" placeholder="輸入您的電子信箱">
-                <input type="button" class="btn btn-secondary text-white" value="訂閱">
+                <input type="button" class="btn btn-secondary" value="訂閱">
               </div>
             </div>
           </div>
