--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -106,7 +106,23 @@
         </div>
       </div>
     </footer>
-
+    <ul class="list-unstyled d-flex flex-column align-items-center position-fixed top-50 end-5">
+      <li>
+        <a href="https://www.facebook.com/" class="text-primary fz-x-large">
+          <i class="fab fa-facebook"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https://www.instagram.com/" class="text-primary fz-x-large">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https://line.me/zh-hant/" class="text-primary fz-x-large">
+          <i class="fab fa-line"></i>
+        </a>
+      </li>
+    </ul>
     <script src="./assets/js/vendors.js"></script>
     <script src="./assets/js/all.js"></script>
   </body>
