[ edit ] 修正上方導覽列右側文字顏色

--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -32,8 +32,8 @@
               <a class="nav-link p-2 me-md-8" href="curriculum.html">當月課表</a>
             </li>
             <li class="nav-item d-flex flex-column align-items-center flex-lg-row mb-4 mb-lg-0">
-              <a class="nav-link p-2 border border-primary rounded-4 me-lg-4 my-2 my-lg-0" href="reservation.html">立即預約</a>
-              <a class="nav-link p-2 border border-primary rounded-4 mt-2 mt-lg-0" href="contact.html">聯絡我們</a>
+              <a class="nav-link p-2 border border-primary text-primary rounded-4 me-lg-4 my-2 my-lg-0" href="reservation.html">立即預約</a>
+              <a class="nav-link p-2 border border-primary text-primary rounded-4 mt-2 mt-lg-0" href="contact.html">聯絡我們</a>
             </li>
           </ul>
         </div>
