--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -27,9 +27,9 @@
               <a class="nav-link py-2" href="#"></a>
             </li>
             <li class="nav-item d-flex flex-column align-items-center flex-lg-row">
-              <a class="nav-link p-2 me-md-8" href="course.html">課程介紹</a>
-              <a class="nav-link p-2 me-md-8" href="surroundings.html">瑜珈空間</a>
-              <a class="nav-link p-2 me-md-8" href="curriculum.html">當月課表</a>
+              <a class="nav-link p-2 me-lg-8" href="course.html">課程介紹</a>
+              <a class="nav-link p-2 me-lg-8" href="surroundings.html">瑜珈空間</a>
+              <a class="nav-link p-2" href="curriculum.html">當月課表</a>
             </li>
             <li class="nav-item d-flex flex-column align-items-center flex-lg-row mb-4 mb-lg-0">
               <a class="nav-link p-2 border border-primary text-primary rounded-4 me-lg-4 my-2 my-lg-0" href="reservation.html">立即預約</a>
