--- a/app/assets/style/helpers/_utilities.scss
+++ b/app/assets/style/helpers/_utilities.scss
@@ -44,6 +44,13 @@ $utilities: map-merge(
       map-get($utilities, "height"),
       (
         responsive: true,
+        values: map-merge(
+          map-get(map-get($utilities, "height"), "values"), 
+          ( 
+            85: 85%,
+            90: 90%,
+          )
+        )
       )
     ),
     "width": map-merge(
