--- a/app/assets/style/helpers/_base.scss
+++ b/app/assets/style/helpers/_base.scss
@@ -12,7 +12,7 @@ body {
 h1 {
   width: 96px;
   height: 31px;
-  background-image: url('../../../assets/images/DOYOGA-logo.png');
+  background-image: url('assets/images/DOYOGA-logo.png');
   background-repeat: no-repeat;
   background-size: contain;
   text-indent: 101%;
@@ -21,7 +21,7 @@ h1 {
 }
 
 .h1 {
-  background-image: url('../../../assets/images/DOYOGA.png');
+  background-image: url('assets/images/DOYOGA.png');
 }
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6, ul, p, figure {
