[ edit ] 調整頁首選單結構

--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -24,10 +24,7 @@
         </h1>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav justify-content-between w-100">
-            <li class="nav-item me-18 d-none d-lg-block">
-              <a class="nav-link py-2" href="#"></a>
-            </li>
-            <li class="nav-item d-flex flex-column align-items-center flex-lg-row">
+            <li class="nav-item d-flex flex-column align-items-center flex-lg-row ps-lg-20 mx-auto">
               <a class="nav-link p-2 me-lg-8" href="course.html">課程介紹</a>
               <a class="nav-link p-2 me-lg-8" href="surroundings.html">瑜珈空間</a>
               <a class="nav-link p-2" href="curriculum.html">當月課表</a>
