--- a/app/assets/style/helpers/_variables.scss
+++ b/app/assets/style/helpers/_variables.scss
@@ -1536,3 +1536,29 @@ $btn-colors: (
   "secondary": $white,
   "light": $primary,
 );
+
+$magic-heights: (
+  "117": 117px,
+  "150": 150px,
+  "161": 161px,
+  "165": 165px,
+  "195": 195px,
+  "196": 196px,
+  "207": 207px,
+  "210": 210px,
+  "216": 216px,
+  "218": 218px,
+  "238": 238px,
+  "248": 248px,
+  "252": 252px,
+  "266": 266px,
+  "323": 323px,
+  "341": 341px,
+  "350": 350px,
+  "360": 360px,
+  "418": 418px,
+  "420": 420px,
+  "444": 444px,
+  "445": 445px,
+  "628": 628px,
+);
