--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -41,9 +41,11 @@
         </button>
       </div>
     </nav>
+
     <main>
       <%- contents %>
     </main>
+
     <footer class="bg-primary">
       <div class="container-fluid border-bottom border-white">
         <div class="container">
@@ -105,6 +107,8 @@
         </div>
       </div>
     </footer>
+
+    <!-- fixed icon list -->
     <ul class="list-unstyled d-flex flex-column align-items-center position-fixed top-50 end-5">
       <li>
         <a href="https://www.facebook.com/" class="text-primary fz-x-large">
@@ -123,10 +127,8 @@
       </li>
     </ul>
 
-    
     <script src="./assets/js/vendors.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/js/datepicker-full.min.js"></script>
     <script src="./assets/js/all.js"></script>
   </body>
 </html>
